--- a/src/opmanagementsystem/BookDoctorPage.form
+++ b/src/opmanagementsystem/BookDoctorPage.form
@@ -219,7 +219,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Oswald" size="18" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Phone Number"/>
+            <Property name="text" type="java.lang.String" value="Phone"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="pdoctorname">
