--- a/src/opmanagementsystem/HomePage.form
+++ b/src/opmanagementsystem/HomePage.form
@@ -277,7 +277,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Royal Hospital"/>
+                <Property name="text" type="java.lang.String" value="LIFE CARE"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel2">
