--- a/src/opmanagementsystem/BookDoctorPage.form
+++ b/src/opmanagementsystem/BookDoctorPage.form
@@ -255,7 +255,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Oswald" size="18" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Desease"/>
+            <Property name="text" type="java.lang.String" value="Place"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="pexit">
